<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Reader</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_feed">Обновить</string>
    <string name="todo">TODO</string>
    <string name="title">Название</string>
    <string name="date">Дата</string>
    <string name="description">Описание</string>
    <string name="downloading_anew">Скачивается обновление</string>
    <string name="loading_cached_data">Загружаются данные из кэша</string>
    <string name="title_activity_show_news_item">Новость из RSS</string>
    <string name="you_are_reading_rss">Вы читаете RSS</string>
    <string name="network_not_available">Извини, дорогой, но сеть недоступна</string>
    <string name="network_not_available_but_can_show_cached_version">Сеть недоступна. Показать данные из кэша?</string>
    <string name="gotyou">Понял</string>
    <string name="ok">Окей</string>
    <string name="ok2">Давай</string>
    <string name="cancel">Отмена</string>
</resources>